--- a/styles/about-styles/about.scss
+++ b/styles/about-styles/about.scss
@@ -364,3 +364,179 @@
   }
 }
 /*Iphone se (Small devices) ends*/
+
+//ipad
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .wrapper-section {
+    height: 78vh;
+    .bg-layer {
+      height: 78vh;
+    }
+  }
+  .hero-section {
+    height: 78vh;
+    .container {
+      width: 80%;
+      .flex-wrapper {
+        .btn {
+          padding: 34px 50px;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+  //main section
+  .main-section {
+    height: auto;
+    padding: 80px 0;
+    .container {
+      .top,
+      .bottom {
+        width: 100%;
+        flex-direction: column;
+        .left {
+          width: 100%;
+        }
+        .right {
+          width: 100%;
+        }
+      }
+      .top {
+        gap: 60px 0;
+        .left {
+          h1 {
+            font-size: 30px;
+          }
+          h2,
+          h3 {
+            max-width: 623px;
+            font-size: 20px;
+            line-height: 35px;
+          }
+          h3 {
+            margin-bottom: 70px;
+          }
+        }
+      }
+      .bottom {
+        gap: 60px 0;
+        .left {
+          .ceo-image {
+            width: 100%;
+            height: 500px;
+          }
+        }
+        .right {
+          h1 {
+            font-size: 30px;
+          }
+          h2,
+          h3 {
+            max-width: 623px;
+            font-size: 20px;
+            line-height: 35px;
+          }
+          h3 {
+            margin-bottom: 70px;
+          }
+        }
+      }
+    }
+  }
+}
+
+//ipad pro
+@media only screen and (min-width: 1024px) and (max-width: 1100px) {
+  .wrapper-section {
+    height: 70vh;
+    .bg-layer {
+      height: 70vh;
+    }
+  }
+  .hero-section {
+    padding-top: 110px;
+    height: 70vh;
+    .container {
+      width: 85%;
+      .flex-wrapper {
+        h1 {
+          font-size: 50px;
+        }
+        h2 {
+          font-size: 27px;
+          line-height: 48px;
+        }
+        .btn {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+
+  //main section
+  .main-section {
+    height: auto;
+    padding: 80px 0;
+    .container {
+      .top,
+      .bottom {
+        width: 100%;
+        flex-direction: column;
+        .left {
+          width: 100%;
+        }
+        .right {
+          width: 100%;
+        }
+      }
+      .top {
+        gap: 60px 0;
+        .left {
+          h1 {
+            font-size: 30px;
+          }
+          h2,
+          h3 {
+            max-width: 100%;
+            font-size: 23px;
+            line-height: 40px;
+          }
+          h3 {
+            margin-bottom: 70px;
+          }
+        }
+      }
+      .bottom {
+        gap: 60px 0;
+        .left {
+          .ceo-image {
+            width: 100%;
+            height: 500px;
+          }
+        }
+        .right {
+          h1 {
+            font-size: 30px;
+          }
+          h2,
+          h3 {
+            max-width: 100%;
+            font-size: 23px;
+            line-height: 40px;
+          }
+          h3 {
+            margin-bottom: 70px;
+          }
+        }
+        .social-links{
+          a{
+            img{
+              width: 55px;
+              height: 55px;         
+            }
+          }
+        }
+      }
+    }
+  }
+}
