--- a/styles/common-styles/_header.scss
+++ b/styles/common-styles/_header.scss
@@ -128,3 +128,26 @@
 /*Normal iphone 6 / x ends*/
 
 
+//ipad
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .header-section{
+    .container{
+      width: 95%;
+      .nav-links{
+        li{
+          margin: 0 21px;
+        }
+        li.active{
+          padding: 70px 31px;
+        }
+      }
+    }
+  }
+}
+
+//ipad pro
+@media only screen and (min-width: 1024px) and (max-width: 1100px) {
+  
+}
+
+
