--- a/styles/contact-styles/contact.scss
+++ b/styles/contact-styles/contact.scss
@@ -246,7 +246,7 @@
         form {
           .first {
             gap: 0px 12px;
-            input{
+            input {
               width: 50%;
             }
           }
@@ -270,13 +270,13 @@
 
 /*Iphone se (Small devices) starts*/
 @media only screen and (min-width: 320px) and (max-width: 370px) {
-  .hero-section{
-    .conatiner{
-      .flex-wrapper{
-        h2{
+  .hero-section {
+    .conatiner {
+      .flex-wrapper {
+        h2 {
           font-size: 14px;
         }
-        .btn{
+        .btn {
           padding: 17px 19px;
           font-size: 10px;
         }
@@ -285,3 +285,123 @@
   }
 }
 /*Iphone se (Small devices) ends*/
+
+//ipad
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .wrapper-section {
+    height: 78vh;
+    .bg-layer {
+      height: 78vh;
+    }
+  }
+  .hero-section {
+    height: 78vh;
+    .container {
+      width: 96%;
+      .flex-wrapper {
+        h2 {
+          line-height: 42px;
+          font-size: 26px;
+        }
+        .btn {
+          padding: 34px 50px;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+  //contact section
+  .contact-section {
+    height: auto;
+    padding: 100px 0;
+    .conatiner {
+      flex-direction: column;
+      gap: 40px 0;
+      .left {
+        width: 100%;
+        h1 {
+          font-size: 40px;
+          margin-bottom: 15px;
+        }
+        h2 {
+          font-size: 22px;
+          line-height: 36px;
+        }
+        form {
+          input {
+            width: 100%;
+          }
+        }
+      }
+      .right {
+        width: 100%;
+      }
+    }
+  }
+}
+
+//ipad pro
+@media only screen and (min-width: 1024px) and (max-width: 1100px) {
+  .wrapper-section {
+    height: 70vh;
+    .bg-layer {
+      height: 70vh;
+    }
+  }
+  .hero-section {
+    padding-top: 110px;
+    height: 70vh;
+    .container {
+      width: 85%;
+      .flex-wrapper {
+        h1 {
+          font-size: 50px;
+        }
+        h2 {
+          font-size: 27px;
+          line-height: 48px;
+        }
+        .btn {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+  //contact section
+  .contact-section {
+    height: auto;
+    padding: 100px 0 150px;
+    .conatiner {
+      flex-direction: column;
+      gap: 40px 0;
+      .left {
+        width: 100%;
+        h1 {
+          font-size: 50px;
+          margin-bottom: 15px;
+        }
+        h2 {
+          font-size: 27px;
+          line-height: 40px;
+        }
+        form {
+          input {
+            width: 100%;
+          }
+          .btn {
+            width: 321px;
+            height: 94px;
+            padding: 31px 54px;
+            font-size: 21px;
+          }
+        }
+      }
+      .right {
+        width: 100%;
+        iframe {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
