--- a/styles/gallary-styles/gallary.scss
+++ b/styles/gallary-styles/gallary.scss
@@ -158,18 +158,18 @@
     }
   }
   //gallert-section
-  .gallery{
+  .gallery {
     width: 100%;
     overflow-x: hidden;
-    .container{
+    .container {
       width: 95%;
-      .wrapper{
+      .wrapper {
         display: flex;
         flex-direction: column;
         width: 100%;
         height: auto;
         justify-content: center;
-        img{
+        img {
           width: 95%;
           margin: 0% auto;
         }
@@ -183,3 +183,68 @@
 @media only screen and (min-width: 320px) and (max-width: 370px) {
 }
 /*Iphone se (Small devices) ends*/
+
+//ipad
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .wrapper-section {
+    height: 78vh;
+    .bg-layer {
+      height: 78vh;
+    }
+  }
+  .hero-section {
+    height: 78vh;
+    .container {
+      width: 80%;
+      .flex-wrapper {
+        .btn {
+          padding: 34px 50px;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+  //gallery section
+  .gallery {
+    .container {
+      .wrapper {
+        grid-template-columns: 1fr;
+        justify-items: center;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+
+//ipad pro
+@media only screen and (min-width: 1024px) and (max-width: 1100px) {
+  .wrapper-section {
+    height: 70vh;
+    .bg-layer {
+      height: 70vh;
+    }
+  }
+  .hero-section {
+    padding-top: 110px;
+    height: 70vh;
+    .container {
+      width: 85%;
+      .flex-wrapper {
+        h1 {
+          font-size: 50px;
+        }
+        h2 {
+          font-size: 27px;
+          line-height: 48px;
+        }
+        .btn {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+  //gallery section
+}
