--- a/index_styles/index.scss
+++ b/index_styles/index.scss
@@ -492,7 +492,7 @@
 /*Desktop Media Quries Ends*/
 
 /*Normal iphone 6 / x Starts*/
-@media (max-width: 400px) {
+@media (max-width: 766px) {
   .wrapper-section {
     width: 100%;
     height: auto;
@@ -649,7 +649,7 @@
 /*Normal iphone 6 / x ends*/
 
 /*Iphone se (Small devices) starts*/
-@media only screen and (min-width: 320px) and (max-width: 370px) {
+@media (min-width: 320px) and (max-width: 375px) {
   //who we are section
   .who-we-are-section {
     padding: 80px 0 40px;
