--- a/styles/common-styles/_header.scss
+++ b/styles/common-styles/_header.scss
@@ -75,7 +75,64 @@
 /*Desktop Media Quries Ends*/
 
 /*Normal iphone 6 / x Starts*/
-@media (max-width: 400px) {
+@media (max-width: 766px) {
+  .header-section {
+    width: 100%;
+    overflow: hidden;
+    .container {
+      width: 90%;
+      height: inherit;
+      .logo {
+        z-index: 3;
+        a {
+          font-size: 30px;
+          span {
+            font-size: 7px;
+          }
+        }
+      }
+      .handBurger {
+        display: block;
+        z-index: 3;
+      }
+      .nav-links {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        right: 0%;
+        bottom: 0%;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: $primary-two;
+        transform: translateX(100%);
+        opacity: 0;
+        transition: 0.3s ease-in-out;
+        z-index: 2;
+        padding: 61% 0 41%;
+        li.active {
+          padding: 0%;
+          background-color: black;
+        }
+        li{
+          margin: 13% 34px;
+        }
+      }
+      .nav-links.open {
+        opacity: 1;
+        transform: translateX(0);
+        z-index: 2;
+      }
+    }
+  }
+}
+/*Normal iphone 6 / x ends*/
+
+
+/*Small phone starts*/
+@media (min-width: 320px) and (max-width: 375px) {
   .header-section {
     width: 100%;
     overflow: hidden;
@@ -125,7 +182,7 @@
     }
   }
 }
-/*Normal iphone 6 / x ends*/
+/*Small phone ends*/
 
 
 //ipad
