--- a/styles/gallary-styles/gallary.scss
+++ b/styles/gallary-styles/gallary.scss
@@ -124,7 +124,7 @@
 /*Desktop Media Quries Ends*/
 
 /*Normal iphone 6 / x Starts*/
-@media (max-width: 400px) {
+@media (max-width: 766px) {
   .wrapper-section {
     width: 100%;
     height: auto;
@@ -180,7 +180,7 @@
 /*Normal iphone 6 / x ends*/
 
 /*Iphone se (Small devices) starts*/
-@media only screen and (min-width: 320px) and (max-width: 370px) {
+@media (min-width: 320px) and (max-width: 375px) {
 }
 /*Iphone se (Small devices) ends*/
 
