--- a/styles/common-styles/_header.scss
+++ b/styles/common-styles/_header.scss
@@ -50,7 +50,7 @@
 }
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width : 2560){
   .header-section {
     .container {
       .logo {
