--- a/index_styles/index.css
+++ b/index_styles/index.css
@@ -164,7 +164,7 @@ img {
 }
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width: 2560) {
   .header-section .container .logo a {
     font-size: 60px;
   }
@@ -529,7 +529,7 @@ img {
 }
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width: 2560) {
   .footer .container {
     width: 90%;
     -webkit-box-align: center;
@@ -800,19 +800,19 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .wrapper-section .bg-layer {
   background-color: #525151c0;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .hero-section {
-  padding-top: 80px;
+  padding: 80px 0 60px;
+  height: auto;
   width: 100%;
-  height: 80vh;
   overflow: hidden;
 }
 
@@ -868,9 +868,9 @@ img {
 
 .who-we-are-section {
   width: 100%;
-  height: 85vh;
+  padding: 80px 0 60px;
+  height: auto;
   overflow: hidden;
-  padding: 50px 0;
   background-color: #eee;
 }
 
@@ -968,8 +968,8 @@ img {
 
 .why-choose-us {
   width: 100%;
-  height: 120vh;
-  padding: 80px 0 50px;
+  height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
 }
 
@@ -1013,7 +1013,8 @@ img {
 
 .why-choose-us .container .card-wrapper .card {
   width: 50%;
-  height: 580px;
+  height: auto;
+  padding: 20px 0;
   background-color: #f8bd59;
 }
 
@@ -1065,8 +1066,8 @@ img {
 
 .gallery-section {
   width: 100%;
-  height: 120vh;
-  padding: 80px 0 50px;
+  height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
   background-color: #eee;
 }
@@ -1137,8 +1138,8 @@ img {
 
 .testmonial-sec {
   width: 100%;
-  height: 120vh;
-  padding: 80px 0 50px;
+  height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
 }
 
@@ -1262,12 +1263,14 @@ img {
 
 /*Laptop media queries ends*/
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width: 2560) {
   .wrapper-section {
-    height: 75vh;
+    height: auto;
+    padding: 40px 60px;
   }
   .hero-section {
-    padding-top: 124px;
+    height: auto;
+    padding: 124px 0 60px;
   }
   .hero-section .container .flex-wrapper h1 {
     font-size: 70px;
@@ -1282,7 +1285,7 @@ img {
   }
   .who-we-are-section {
     height: auto;
-    padding: 150px 0;
+    padding: 40px 60px;
   }
   .who-we-are-section .container .title {
     font-size: 50px;
@@ -1300,7 +1303,11 @@ img {
   }
   .why-choose-us {
     height: auto;
-    padding: 120px 0;
+    padding: 40px 60px;
+  }
+  .why-choose-us .container .card-wrapper .card {
+    height: auto;
+    padding: 40px 0 80px;
   }
   .why-choose-us .container .card-wrapper .card .container img {
     width: 90px;
@@ -1324,7 +1331,7 @@ img {
   }
   .gallery-section {
     height: auto;
-    padding: 120px 0;
+    padding: 40px 60px;
   }
   .gallery-section .container a {
     padding: 18px 45px;
@@ -1332,7 +1339,7 @@ img {
   }
   .testmonial-sec {
     height: auto;
-    padding: 120px 0 200px;
+    padding: 40px 60px;
   }
   .testmonial-sec .container .swiper {
     width: 94%;
