--- a/styles/about-styles/about.css
+++ b/styles/about-styles/about.css
@@ -164,7 +164,7 @@ img {
 }
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width: 2560) {
   .header-section .container .logo a {
     font-size: 60px;
   }
@@ -529,7 +529,7 @@ img {
 }
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width: 2560) {
   .footer .container {
     width: 90%;
     -webkit-box-align: center;
@@ -800,19 +800,19 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .wrapper-section .bg-layer {
   background-color: #525151c0;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .hero-section {
-  padding-top: 80px;
   width: 100%;
-  height: 80vh;
+  height: auto;
+  padding: 80px 0 50px;
   overflow: hidden;
 }
 
@@ -869,7 +869,7 @@ img {
   background-color: #eee;
   width: 100%;
   height: auto;
-  padding: 100px 0;
+  padding: 80px 0 60px;
 }
 
 .main-section .container {
@@ -1029,9 +1029,10 @@ img {
 
 /*Laptop media queries ends*/
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width: 2560) {
   .wrapper-section {
-    height: 70vh;
+    height: auto;
+    padding: 40px 60px;
   }
   .hero-section .container .flex-wrapper h1 {
     font-size: 70px;
@@ -1042,6 +1043,10 @@ img {
   }
   .hero-section .container .flex-wrapper .btn {
     font-size: 20px;
+  }
+  .main-section {
+    height: auto;
+    padding: 40px 60px;
   }
   .main-section .container .top .left h1,
   .main-section .container .top .right h1,
