--- a/styles/about-styles/about.scss
+++ b/styles/about-styles/about.scss
@@ -9,19 +9,19 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
   .bg-layer {
     background-color: #525151c0;
     width: 100%;
-    height: 100vh;
+    height: auto;
   }
 }
 
 //hero-section
 .hero-section {
-  padding-top: 80px;
   width: 100%;
-  height: 80vh;
+  height: auto;
+  padding: 80px 0 50px;
   overflow: hidden;
   .container {
     width: 70%;
@@ -66,7 +66,7 @@
   background-color: $bg-color;
   width: 100%;
   height: auto;
-  padding: 100px 0;
+  padding: 80px 0 60px;
   .container {
     width: 89%;
     height: inherit;
@@ -189,9 +189,10 @@
 /*Laptop media queries ends*/
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width : 2560){
   .wrapper-section {
-    height: 70vh;
+    height: auto;
+    padding: 40px 60px;
   }
   .hero-section {
     .container {
@@ -211,6 +212,8 @@
   }
   //main-section
   .main-section {
+    height: auto;
+    padding: 40px 60px;
     .container {
       .top,
       .bottom {
