--- a/styles/common-styles/_footer.scss
+++ b/styles/common-styles/_footer.scss
@@ -103,7 +103,7 @@
 }
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width : 2560){
   .footer {
     .container {
       width: 90%;
