--- a/styles/contact-styles/contact.scss
+++ b/styles/contact-styles/contact.scss
@@ -9,19 +9,19 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
   .bg-layer {
     background-color: #525151c0;
     width: 100%;
-    height: 100vh;
+    height: auto;
   }
 }
 
 //hero-section
 .hero-section {
-  padding-top: 80px;
   width: 100%;
-  height: 80vh;
+  height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
   .container {
     width: 70%;
@@ -63,9 +63,9 @@
 //contact-section
 .contact-section {
   width: 100%;
-  height: 120vh;
+  height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
-  padding: 120px 0;
   background-color: $bg-color;
   .conatiner {
     width: 89%;
@@ -139,13 +139,15 @@
 /*Laptop media queries ends*/
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width : 2560){
   .wrapper-section {
-    height: 70vh;
+    height: auto;
+    padding: 40px 60px;
   }
   //contact section
   .contact-section {
-    height: 85vh;
+    height: auto;
+    padding: 40px 60px;
     .conatiner {
       width: 85%;
       justify-content: center;
