--- a/styles/gallary-styles/gallary.scss
+++ b/styles/gallary-styles/gallary.scss
@@ -9,18 +9,19 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: auto;
   .bg-layer {
     background-color: #525151c0;
     width: 100%;
-    height: 100vh;
+    height: auto;
   }
 }
 //hero-section
 .hero-section {
   padding-top: 80px;
   width: 100%;
-  height: 80vh;
+  height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
   .container {
     width: 70%;
@@ -62,8 +63,8 @@
 .gallery {
   width: 100%;
   height: auto;
+  padding: 80px 0 60px;
   overflow: hidden;
-  padding: 80px 0;
   background-color: $bg-color;
   .container {
     width: 89%;
@@ -86,12 +87,15 @@
 /*Laptop media queries ends*/
 
 /*Desktop Media Quries Starts*/
-@media only screen and (min-width: 1600px) {
+@media (max-width : 2560){
   .wrapper-section {
-    height: 70vh;
+    height: auto;
+    padding: 40px 60px;
   }
   //hero section
   .hero-section {
+    height: auto;
+    padding: 40px 60px;
     .container {
       .flex-wrapper {
         h1 {
@@ -108,6 +112,8 @@
   }
   //geallery section
   .gallery {
+    height: auto;
+    padding: 40px 60px;
     .container {
       width: 85%;
       .wrapper {
