--- a/index_styles/index.scss
+++ b/index_styles/index.scss
@@ -297,6 +297,7 @@
     }
     //swiper
     .swiper {
+      overflow: hidden;
       width: 100%;
       height: 50%;
       padding-top: 19px;
@@ -325,6 +326,9 @@
               img {
                 width: 326px;
                 height: 326px;
+                border-radius: 50%;
+                object-fit: cover;
+                object-position: center;
               }
             }
             .right {
